[package]
name = "finshir"
description = "A coroutines-driven Low & Slow traffic sender, written in Rust"
repository = "https://github.com/Gymmasssorla/finshir"
version = "0.1.0"
authors = ["Temirkhan Myrzamadi <gymmasssorla@gmail.com>"]
keywords = ["finshir", "ddos-attacks", "load-generator", "stress-testing", "pentest-tool"]
categories = ["command-line-utilities", "simulation", "network-programming"]
readme = "README.md"
license = "GPL-3.0-only"
edition = "2018"

[dependencies]
structopt = "0.2.15"
humantime = "1.2.0"
time = "0.1.42"
tor-stream = "0.2.0"
may = "0.3.7"
colored = "1.7.0"
log = "0.4.6"
fern = { version = "0.5.8", features = ["colored"] }
serde_json = "1.0.39"
serde = {version = "1.0.90", features = ["derive"] }
